Convert to webapp, add websocket support

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <HTML>
     <HEAD>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <LINK REL="stylesheet" HREF="style.css">
-        <SCRIPT TYPE="text/javascript" SRC="index.js"></SCRIPT>
-        <SCRIPT TYPE="text/javascript" SRC="mapper.js"></SCRIPT>
+        <LINK REL="stylesheet" HREF="./css/style.css">
+        <SCRIPT TYPE="text/javascript" SRC="./js/index.js"></SCRIPT>
+        <SCRIPT TYPE="text/javascript" SRC="./js/mapper.js"></SCRIPT>
     </HEAD>
     <BODY>
         <DIV CLASS="mapcontainer">
