--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,16 @@
             </DIV>
         </DIV>
         <DIV CLASS="gamescreen" ID="gamescreen">
+            <DIV CLASS="leaderboard">
+                <TABLE CLASS="lb_table" ID="leaderboard">
+                    <DIV CLASS="lb_header">Players</DIV>
+                    <DIV ID="players_container">
+                        <!-- player leaderboard goes here -->
+                    </DIV>
+                    
+                    
+                </TABLE>
+            </DIV>
             <DIV CLASS="mapcontainer">
                 <DIV ID="map">Loading...</DIV>
             </DIV>
