new map + user controls

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <HEAD>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <LINK REL="stylesheet" HREF="./css/style.css">
 
         <!-- configs | put in front of js files -->
@@ -34,8 +34,8 @@
                     
                 </TABLE>
             </DIV>
-            <DIV CLASS="mapcontainer">
-                <DIV ID="map">Loading...</DIV>
+            <DIV CLASS="mapcontainer" ID="mapcontainer">
+                <DIV ID="map"><DIV ID="svg-map-bg" class="svg-map-bg">Loading...</DIV></DIV>
             </DIV>
         </DIV>
     </BODY>
