add line path algorithm

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                 </TABLE>
             </DIV>
             <DIV CLASS="mapcontainer" ID="mapcontainer">
-                <DIV ID="map"><DIV ID="svg-map-bg" class="svg-map-bg">Loading...</DIV></DIV>
+                <DIV ID="map"><DIV ID="svg-map-bg" class="svg-map-bg"><DIV ID="mapl2"></DIV><DIV ID="maploading">Loading...</DIV></DIV></DIV>
             </DIV>
         </DIV>
     </BODY>
