region targeting + pins

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     </HEAD>
     <BODY>
         <DIV CLASS="lobbyscreen" ID="lobbyscreen">
-            <DIV CLASS="header">Game Name</DIV>
+            <DIV CLASS="header">Emblitz</DIV>
             <DIV CLASS="join_input">
                 <INPUT ID="p_name" CLASS="name_input" TYPE="text" PLACEHOLDER="Name here...">
                 <DIV CLASS="h_button_options">
@@ -34,7 +34,7 @@
                     
                 </TABLE>
             </DIV>
-            <DIV CLASS="mapcontainer" ID="mapcontainer">
+            <DIV CLASS="mapcontainer" STYLE="transform: scale(1)" ID="mapcontainer">
                 <DIV ID="map"><DIV ID="svg-map-bg" class="svg-map-bg"><DIV ID="mapl2"></DIV><DIV ID="maploading">Loading...</DIV></DIV></DIV>
             </DIV>
         </DIV>
