fix firefox scrolling bug

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                 </DIV>
             </DIV>
             <DIV CLASS="mapcontainer" STYLE="transform: scale(1)" ID="mapcontainer">
-                <DIV ID="map"><DIV ID="svg-map-bg" class="svg-map-bg"><DIV ID="mapl2"></DIV><DIV ID="maploading">Loading...</DIV></DIV></DIV>
+                <DIV ID="map" STYLE="transform: translate(0px, 0px);"><DIV ID="svg-map-bg" class="svg-map-bg"><DIV ID="mapl2"></DIV><DIV ID="maploading">Loading...</DIV></DIV></DIV>
             </DIV>
         </DIV>
     </BODY>
