--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
             const hostname = "<%= host_name %>";
         </SCRIPT>
 
+        <SCRIPT TYPE="text/javascript" SRC="./js/colorData.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="./js/mapnames.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="./js/index.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="./js/mapper.js"></SCRIPT>
@@ -62,6 +63,7 @@
                         <INPUT TYPE="range" MIN="1" MAX="100" VALUE="75" CLASS="troopslider" ID="troopslider">
                     </DIV>
                 </DIV>
+                <DIV CLASS="playermessage">Select a starting point</DIV>
             </DIV>
             <DIV CLASS="mapcontainer" STYLE="transform: scale(1)" ID="mapcontainer">
                 <DIV ID="map" STYLE="transform: translate(0px, 0px);"><DIV ID="svg-map-bg" class="svg-map-bg"><DIV ID="mapl2"></DIV><DIV ID="maploading">Loading...</DIV></DIV></DIV>
