--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
                     <BUTTON CLASS="joinbutton jb_gray" ID="joinprivate" ONCLICK="showJoinRoom()">Join Game</BUTTON>
                     <DIV CLASS="joinroom_area" ID="joinroom_area" STYLE="display: none;"><INPUT CLASS="room_input" ID="room_id" MAXLENGTH="6" PLACEHOLDER="123abc"><BUTTON CLASS="joinbutton jb_green" ID="joingame" style="padding: 7px !important; margin-left: 5px" ONCLICK="gameConnect(document.getElementById('p_name').value, 'r-' + document.getElementById('room_id').value, document.getElementById('framecolor').value)">Connect</BUTTON></DIV>
                     <BR><BR>
-                    <!-- REMOVE THIS WHEN DONE, MAKE BETTER LOOKING FRAME SELECT MENU -->
-                    (frame color select; this is only for testing and is temporary)<BR>
+                    <!-- REMOVE THIS WHEN DONE, MAKE BETTER LOOKING COLOR SELECT MENU -->
+                    (color preference select; this is only for testing and is temporary)<BR>
                     <SELECT ID="framecolor" STYLE="padding: 5px; font-size: 17px">
                         <OPTION VALUE="red">red</OPTION>
                         <OPTION VALUE="orange">orange</OPTION>
