--- a/public/index.html
+++ b/public/index.html
@@ -49,14 +49,13 @@
         <DIV CLASS="gamescreen" ID="gamescreen">
             <DIV ID="player_gui">
                 <DIV CLASS="leaderboard">
-                    <TABLE CLASS="lb_table" ID="leaderboard">
+                    <DIV CLASS="lb_table" ID="leaderboard">
+                        <DIV CLASS="leaderboard_bg"></DIV> <!-- transparent background to bypass goofy ahh transparency css -->
                         <DIV CLASS="lb_header">Players</DIV>
                         <DIV ID="players_container">
                             <!-- player leaderboard goes here -->
-                        </DIV>
-                        
-                        
-                    </TABLE>
+                        </DIV>                       
+                    </DIV>
                 </DIV>
                 <DIV CLASS="troopscontrol">
                     <DIV CLASS="t_avatar-frame"></DIV>
