--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <HTML>
     <HEAD>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <LINK REL="stylesheet" HREF="./css/style.css">
 
         <!-- configs | put in front of js files -->
@@ -64,15 +65,23 @@
                     </DIV>
                 </DIV>
                 <DIV CLASS="troopscontrol">
-                    <DIV CLASS="t_avatar-frame"></DIV>
+                    <DIV CLASS="troopscontrolbg"></DIV>
+                    <DIV CLASS="t_avatar-frame" ID="t-avatar-frame"></DIV>
                     <DIV STYLE="margin-top: -80px; margin-left: 60px;">
                         <INPUT TYPE="range" MIN="1" MAX="100" VALUE="75" CLASS="troopslider" ID="troopslider">
+                        <BR>
+                        <DIV CLASS="controlitem" ID="trooppercentage">75%</DIV><DIV CLASS="controlitem" ID="sendamount">--</DIV>
                     </DIV>
                 </DIV>
                 <DIV CLASS="infobar-main" ID="infobar">
                     <DIV CLASS="infobar-bg"></DIV>
                     <DIV CLASS="ibmain-text" ID="statustext"><B>Deploy Phase:</B> Select a starting point</DIV>
                     <DIV CLASS="timer-bg"><DIV CLASS="timer-line" ID="eventstimer"></DIV></DIV>
+                </DIV>
+                <DIV CLASS="troopcounterinfo">
+                    <DIV CLASS="troopcounter-bg"></DIV>
+                    <DIV CLASS="troopcounter"><IMG CLASS="troopcounterimage" SRC="./images/troopgaincounter.png"><DIV CLASS="troopcountertext"><SPAN ID="troopseconds">10</SPAN> seconds</DIV></DIV>
+                    <DIV CLASS="timer-bg"><DIV CLASS="timer-line" ID="troopstimer"></DIV></DIV>
                 </DIV>
             </DIV>
             <DIV CLASS="mapcontainer" STYLE="transform: scale(1)" ID="mapcontainer">
