update game stuff

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         <!-- configs | put in front of js files -->
         <SCRIPT>
             const hostname = "<%= host_name %>";
+            const prod = "<%= prod %>";
         </SCRIPT>
 
         <SCRIPT TYPE="text/javascript" SRC="./js/colorData.js"></SCRIPT>
