update copy paste fix

--- a/public/errorpages/404.html
+++ b/public/errorpages/404.html
@@ -3,6 +3,8 @@
     <HEAD>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <LINK REL="stylesheet" HREF="./css/style.css">
+
+        <link rel="icon" href="../images/icon.png">
     </HEAD>
     <STYLE>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans');
