--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                         </DIV>
                     </DIV>
                     <DIV CLASS="h_button_options">
-                        <BUTTON CLASS="joinbutton jb_green" STYLE="margin-right: 5px" ID="joingame" ONCLICK="gameConnect(document.getElementById('p_name').value, null, document.getElementById('framecolor').value, document.getElementById('mapselect').value, false)">Play</BUTTON>
+                        <BUTTON CLASS="joinbutton jb_green" ID="joingame" ONCLICK="gameConnect(document.getElementById('p_name').value, null, document.getElementById('framecolor').value, document.getElementById('mapselect').value, false)">Play</BUTTON>
                         <BUTTON CLASS="joinbutton jb_gray" ID="joinprivate" ONCLICK="showJoinRoom()">Join Game</BUTTON>
                         <DIV CLASS="joinroom_area" ID="joinroom_area" STYLE="display: none;">
                             <DIV CLASS="joinroomtext">Got an invite code? Enter it here to join the game.</DIV>
