--- a/public/tutorial.html
+++ b/public/tutorial.html
@@ -7,3 +7,121 @@
 
         <link rel="icon" href="./images/icon.png">
     </HEAD>
+    <BODY>
+        <!-- tutorial page only styles  -->
+        <STYLE>
+            body {
+                background: var(--night);
+                overflow-x: none;
+            }
+
+            .content {
+                max-width: 700px;
+                margin: auto;
+                margin-top: 100px;
+                padding: 20px;
+                background: var(--dark);
+                color: var(--light);
+            }
+
+            @media only screen and (max-width: 750px) {
+                .content {
+                    width: 100%;
+                    max-width: 750px;
+                }
+
+                .paragraph {
+                    display: inline-block;
+                }
+            }
+
+            @media only screen and (max-width: 500px) {
+                .mainimage {
+                    width: calc(100% - 40px) !important;
+                    margin-top: 15px;
+                    margin-bottom: 15px;
+                    margin-right: 40px !important;
+                    float: none;
+                }
+
+                .logoimg {
+                    width: 200px !important;
+                }
+            }
+
+            .content-text {
+                text-align: left;
+                margin-left: 7px;
+                margin-top: 0px;
+            }
+
+            .header {
+                font-size: 35px;
+                font-weight: bold;
+                text-align: left;
+                margin: 0px;
+                padding: 0px;
+                padding-bottom: 20px;
+            }
+
+            .paragraph {
+                display: block;
+                float: none;
+                margin-right: 30px;
+                font-size: 17px;
+            }
+
+            .logoimg {
+                width: 300px;
+            }
+
+            .mainimage {
+                width: 300px;
+                margin-right: 20px;
+                padding-left: 10px;
+                padding-bottom: 10px
+            }
+
+            a {
+                color: var(--light);
+            }
+
+            a:hover {
+                color: var(--medium);
+            }
+
+            a:visited {
+                color: var(--light);
+            }
+
+            a:visited:hover {
+                color: var(--medium);
+            }
+            
+            ul {
+                margin-top: -10px;
+            }
+
+            li {
+                margin-bottom: 5px;
+            }
+        </STYLE>
+        <DIV CLASS="content">
+            <IMG CLASS="logoimg" SRC="./images/logo.png">
+            <DIV CLASS="content-text">
+                <DIV CLASS="header">Game Tutorial</DIV>
+                <IMG CLASS="mainimage" STYLE="float: right" SRC="./images/tutorial/imgintro.JPG">
+                <P CLASS="paragraph">Thanks for playing Emblitz! Emblitz is an online fast-paced real time strategy game. Players can battle each other out on maps. Some maps include scale real-world places for you to fight over! The game mechanics are simple, but there's a lot of strategy involved. Good luck, and have fun playing!</P>
+                <P CLASS="paragraph">Table of contents:
+                    <UL>
+                        <LI><A HREF="#objectives">Objectives</A></LI>
+                        <LI><A HREF="#controls">Controls</A></LI>
+                        <LI><A HREF="#controls">Game Mechanics</A></LI>
+                        <LI><A HREF="#pinteraction">Player Interaction</A></LI>
+                        <LI><A HREF="#faqs">Frequently Asked Questions (FAQs)</A></LI>
+                    </UL>
+                </P>
+                <DIV ID=""
+            </DIV>
+        </DIV>
+    </BODY>
