--- a/public/index.html
+++ b/public/index.html
@@ -95,8 +95,9 @@
                         </DIV>
                         <BR><BR>
                         <BUTTON CLASS="joinbutton jb_gray" ID="joingame" ONCLICK="gameConnect(document.getElementById('p_name').value, null, document.getElementById('framecolor').value, mapselectedvalue, true)" STYLE="width: 250px;">Create Private Room</BUTTON>
-                        <BR><BR>
+                        <BR>
                     </DIV>
+                    <A HREF="./tutorial" CLASS="ltp-link">Learn to Play</A><BR><BR>
                 </DIV>
             </DIV>
             <DIV CLASS="gameversion"><%= gameversion %></DIV>
