--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
 
             gtag('config', 'G-QNCVLQXQCJ');
         </script>
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6720539950929131"
+        crossorigin="anonymous"></script>
         
         <link rel="icon" href="./images/icon.png">
 
