--- a/public/tutorial.html
+++ b/public/tutorial.html
@@ -132,7 +132,7 @@
                     <br>
                     <h2>Objectives</h2>
                     <IMG CLASS="cimage" STYLE="float: right" SRC="./images/tutorial/domination.jpg">
-                    <p CLASS="paragraph">The main objective of Emblitz is to conquor the world by taking over every single territory on the map.</p>
+                    <p CLASS="paragraph">The main objective of Emblitz is to conquer the world by taking over every single territory on the map.</p>
                 </DIV>
                 <DIV ID="controls">
                     <br>
